# ChangeLog for dev-java/ibm-jdk-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jdk-bin/ChangeLog,v 1.184 2008/12/08 20:58:00 caster Exp $

*ibm-jdk-bin-1.6.0.3 (08 Dec 2008)

  08 Dec 2008; Vlastimil Babka <caster@gentoo.org>
  +ibm-jdk-bin-1.6.0.3.ebuild:
  Version bump, found no changelog or security alert. Users now have to
  rename the javacomm distfile because it changes content without versioning
  the filename properly.

  18 Oct 2008; Vlastimil Babka <caster@gentoo.org>
  -ibm-jdk-bin-1.4.2.11.ebuild, -ibm-jdk-bin-1.6.0.1.ebuild,
  -ibm-jdk-bin-1.6.0.1-r1.ebuild, -ibm-jdk-bin-1.6.0.2.ebuild:
  Cleanup old versions.

  15 Oct 2008; Markus Rothe <corsair@gentoo.org>
  ibm-jdk-bin-1.4.2.12.ebuild:
  Stable on ppc/ppc64; bug #233652

  14 Oct 2008; Markus Rothe <corsair@gentoo.org>
  ibm-jdk-bin-1.6.0.2-r1.ebuild:
  Stable on ppc/ppc64; bug #233652

  12 Oct 2008; Markus Meier <maekke@gentoo.org> ibm-jdk-bin-1.4.2.12.ebuild:
  amd64/x86 stable, bug #233652

*ibm-jdk-bin-1.6.0.2-r1 (11 Oct 2008)

  11 Oct 2008; Vlastimil Babka <caster@gentoo.org>
  +ibm-jdk-bin-1.6.0.2-r1.ebuild:
  Revbump to use correct javacomm distfile, bug #240384.

*ibm-jdk-bin-1.4.2.12 (11 Oct 2008)

  11 Oct 2008; Vlastimil Babka <caster@gentoo.org>
  +ibm-jdk-bin-1.4.2.12.ebuild:
  Version bump, security bug #233652.

  17 Sep 2008; Markus Rothe <corsair@gentoo.org> ibm-jdk-bin-1.6.0.2.ebuild:
  Stable on ppc/ppc64; bug #233652

*ibm-jdk-bin-1.6.0.2 (16 Sep 2008)

  16 Sep 2008; Vlastimil Babka <caster@gentoo.org>
  -ibm-jdk-bin-1.5.0.8.ebuild, +ibm-jdk-bin-1.6.0.2.ebuild:
  Version bump, security bug #233652.

  12 Sep 2008; Markus Meier <maekke@gentoo.org> ibm-jdk-bin-1.5.0.8a.ebuild:
  x86 stable, bug #233652

  10 Sep 2008; Kenneth Prugh <ken69267@gentoo.org>
  ibm-jdk-bin-1.5.0.8a.ebuild:
  amd64 stable, bug #233652

  10 Sep 2008; Brent Baude <ranger@gentoo.org> ibm-jdk-bin-1.5.0.8a.ebuild: