@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/ibm-jdk-bin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jdk-bin/ChangeLog,v 1.184 2008/12/08 20:58:00 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jdk-bin/ChangeLog,v 1.185 2008/12/20 20:17:34 caster Exp $
+
+*ibm-jdk-bin-1.5.0.9 (20 Dec 2008)
+
+  20 Dec 2008; Vlastimil Babka <caster@gentoo.org>
+  +ibm-jdk-bin-1.5.0.9.ebuild:
+  Version bump.
 
 *ibm-jdk-bin-1.6.0.3 (08 Dec 2008)
 
